--- a/src/assets/scss/sections/about.scss
+++ b/src/assets/scss/sections/about.scss
@@ -1,4 +1,4 @@
-.profit{
+.about{
   padding: 120px 120px 154px;
   background-image: url('../../static/img/profit.png');
   background-position: bottom;
@@ -17,10 +17,10 @@
   }
   @media($tablet){
     border-radius: $sm-radius;
+    padding: 32px 16px;
   }
   @media($mobile){
     background-image: none;
-    padding: 32px 16px;
     &__text{
       @include title();
     }
