added validation for phone number, changed index

--- a/src/assets/scss/sections/feedback.scss
+++ b/src/assets/scss/sections/feedback.scss
@@ -26,6 +26,7 @@
       }
     }
     &-label{
+      cursor: pointer;
       input[type=checkbox]:checked+p:before{
         background: url("../../static/img/checked.svg");
       }
