added service page + changes in webpack.config

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -10,6 +10,8 @@
 @import 'sections/customers';
 @import 'sections/reconstruction';
 @import 'sections/feedback';
+@import 'sections/lead-block';
+@import 'sections/services';
 //@import 'sections/order';
 //@import "~select2";
 //@import 'sections/select2-custom';
