--- a/src/assets/scss/utils/fonts.scss
+++ b/src/assets/scss/utils/fonts.scss
@@ -10,7 +10,7 @@
   font-display:swap;}
 
 @font-face{
-  font-family:"Lato";
+  font-family:"Manrope";
   src: url('../fonts/Manrope/Manrope-ExtraBold.eot');
   src: url('../fonts/Manrope/Manrope-ExtraBold.eot?#iefix') format('embedded-opentype'),
   url('../fonts/Manrope/Manrope-ExtraBold.woff2') format('woff2'),
