--- a/src/assets/scss/UI/caption.scss
+++ b/src/assets/scss/UI/caption.scss
@@ -6,11 +6,6 @@
   height: 198px;
   border-radius: 50%;
   transition: .3s all;
-  @media($mobile){
-    padding: 8px;
-    width: 136px;
-    height: 136px;
-  }
   &__text{
     display: flex;
     align-items: center;
@@ -27,10 +22,6 @@
     width: 100%;
     height: 100%;
     transition: .3s all;
-    @media($mobile){
-      font-size: 20px;
-      line-height: 24px;
-    }
   }
   &:hover{
     border-color: $hovered;
@@ -59,5 +50,14 @@
   &_s{
     width: 136px;
     height: 136px;
+  }
+  @media($mobile){
+    padding: 8px;
+    width: 136px;
+    height: 136px;
+    &__text{
+      font-size: 20px;
+      line-height: 24px;
+    }
   }
 }
