details-page, fixed styles & html

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -12,6 +12,8 @@
 @import 'sections/feedback';
 @import 'sections/lead-block';
 @import 'sections/services';
+@import 'sections/method';
+@import 'sections/advantages';
 //@import 'sections/order';
 //@import "~select2";
 //@import 'sections/select2-custom';
