--- a/src/assets/scss/utils/vars.scss
+++ b/src/assets/scss/utils/vars.scss
@@ -22,6 +22,7 @@ $active:#BB8637;
 $radius:96px;
 $sm-radius:32px;
 //Screens
+$laptop: 'max-width:1300px';
 $tablet: 'max-width:1100px';
 $mobile: 'max-width:767px';
 $mobile-mini: 'max-width:600px';
