--- a/src/assets/scss/UI/caption.scss
+++ b/src/assets/scss/UI/caption.scss
@@ -1,11 +1,12 @@
 .caption{
   background: transparent;
   border:4px solid $red;
-  padding: 15px;
+  padding: 12px;
   width: 198px;
   height: 198px;
   border-radius: 50%;
   transition: .3s all;
+  display: block;
   &__text{
     display: flex;
     align-items: center;
