--- a/src/assets/scss/UI/project.scss
+++ b/src/assets/scss/UI/project.scss
@@ -12,8 +12,12 @@
   }
   &__title{
     @include h1($white);
+    display: block;
     margin-bottom: 48px;
     transition: .2s all;
+    &:hover{
+      color: $red;
+    }
   }
   &__btn{
     margin-top: 48px;
@@ -27,11 +31,6 @@
       object-fit: cover;
       height: 100%;
       border-radius: $radius $radius $radius 0;
-    }
-  }
-  &:hover{
-    .project-item__title{
-      color: $red;
     }
   }
   @media($tablet){
