--- a/src/assets/scss/sections/about.scss
+++ b/src/assets/scss/sections/about.scss
@@ -1,11 +1,9 @@
 .about{
-  padding: 120px 120px 154px;
+  @include section();
   background-image: url('../../static/img/profit.png');
   background-position: bottom;
   background-repeat: no-repeat;
-  background-color: $gray;
   background-size: contain;
-  border-radius: $radius;
   &__text{
     @include h1();
     span{
@@ -16,8 +14,7 @@
     margin-top: 48px;
   }
   @media($tablet){
-    border-radius: $sm-radius;
-    padding: 32px 16px;
+    @include section-sm();
   }
   @media($mobile){
     background-image: none;
