--- a/src/assets/scss/sections/customers.scss
+++ b/src/assets/scss/sections/customers.scss
@@ -1,7 +1,5 @@
 .customers{
-  background-color: $gray-1;
-  border-radius: $radius;
-  padding: 120px;
+  @include section($gray-1);
   &__wrapper{
     display: flex;
     align-items: center;
@@ -10,7 +8,7 @@
   }
   &__title{
     @include h1($white);
-    letter-spacing: -.5px;
+    letter-spacing: -2.2px;
     font-weight: 800;
     margin-right: 111px;
     align-self: flex-start;
