--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -14,6 +14,7 @@
 @import 'sections/services';
 @import 'sections/method';
 @import 'sections/advantages';
+@import 'sections/prices';
 //@import 'sections/order';
 //@import "~select2";
 //@import 'sections/select2-custom';
