--- a/src/assets/scss/sections/lead-block.scss
+++ b/src/assets/scss/sections/lead-block.scss
@@ -15,6 +15,9 @@
     color: $gray-2;
     text-align: center;
     max-width: 93%;
+    &:not(:first-of-type){
+      margin-top: 32px;
+    }
   }
   &__images{
     position: relative;
@@ -85,6 +88,9 @@
       margin-top: 24px;
       max-width: 100%;
       @include body2($gray-2);
+      &:not(:first-of-type){
+        margin-top: 16px;
+      }
     }
     &__images{
       margin-top: 58px;
