--- a/src/assets/scss/UI/task.scss
+++ b/src/assets/scss/UI/task.scss
@@ -2,6 +2,7 @@
   &-list{
     background-color: $gray-2;
     border-radius: 48px;
+    margin-top: 48px;
     &__item{
       padding: 48px;
       border-radius: 48px;
@@ -24,6 +25,7 @@
   @media($mobile){
     &-list{
       border-radius: 24px;
+      margin-top: 24px;
       &__name{
         margin-bottom: 8px;
         @include body2($white);
