--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -11,6 +11,7 @@
 @import 'sections/customers';
 @import 'sections/reconstruction';
 @import 'sections/feedback';
+@import 'sections/reviews';
 
 @import 'sections/services';
 @import 'sections/method';
