--- a/src/assets/scss/sections/customers.scss
+++ b/src/assets/scss/sections/customers.scss
@@ -24,6 +24,7 @@
     margin-bottom: 8px;
     margin-left: 8px;
     text-align: center;
+    max-width: 188px;
     &:first-of-type{
       margin-left: 0;
     }
