--- a/src/assets/scss/sections/projects.scss
+++ b/src/assets/scss/sections/projects.scss
@@ -1,10 +1,5 @@
 .projects{
-  background-color: $gray-1;
-  background-image: url('../../static/img/objects.png');
-  background-position: left;
-  background-repeat: no-repeat;
-  background-size: contain;
-  border-radius: $radius;
+
   &__btn{
     display: none;
   }
@@ -17,6 +12,7 @@
   @media($mobile){
     padding: 32px 16px;
     background-image: none;
+    background-color: $gray-1;
     &__title{
       @include h3();
       font-weight: 800;
@@ -27,6 +23,18 @@
     &__btn{
       display: flex;
       margin-top: 24px;
+    }
+  }
+}
+.mobile-wrapper{
+  margin-bottom: 8px;
+  @media($tablet){
+    padding: 32px 16px;
+    background: $gray-1;
+    border-radius: $sm-radius;
+    &__projects{
+      margin-top: 0!important;
+      padding:0;
     }
   }
 }
