--- a/src/assets/scss/sections/services.scss
+++ b/src/assets/scss/sections/services.scss
@@ -25,7 +25,7 @@
     @include h1($dark);
   }
   &__button{
-    width: 48px;
+    min-width: 48px;
     height: 48px;
     background: $red;
     display: flex;
