--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -12,6 +12,8 @@
 @import 'sections/reconstruction';
 @import 'sections/feedback';
 @import 'sections/reviews';
+@import 'sections/map';
+@import 'sections/contacts';
 
 @import 'sections/services';
 @import 'sections/method';
