--- a/src/assets/scss/sections/reviews.scss
+++ b/src/assets/scss/sections/reviews.scss
@@ -86,6 +86,7 @@
       bottom: 0;
       right: 16px;
       padding: 16px;
+      border-radius: 24px;
       &:before{
         content:"";
         width: 64px;
