--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -14,6 +14,7 @@
 @import 'sections/reviews';
 @import 'sections/map';
 @import 'sections/contacts';
+@import 'sections/slider';
 
 @import 'sections/services';
 @import 'sections/method';
