--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -2,6 +2,7 @@
 @import 'utils/fonts';
 @import 'utils/reset';
 //@import 'sections/header';
+@import 'sections/footer';
 @import "utils/globals";
 @import 'sections/lead-block';
 @import 'sections/main';
