--- a/src/assets/scss/UI/btn.scss
+++ b/src/assets/scss/UI/btn.scss
@@ -8,6 +8,7 @@
   background: $red;
   border-radius: 40px;
   border: none;
+  outline: none;
   cursor: pointer;
   font-family: "Manrope";
   font-weight: 800;
