--- a/src/assets/scss/UI/project.scss
+++ b/src/assets/scss/UI/project.scss
@@ -36,6 +36,7 @@
   &__icon{
     background-color: $red;
     border-radius: 50%;
+    min-width: 32px;
     width: 32px;
     height: 32px;
     display: flex;
