--- a/src/assets/scss/utils/globals.scss
+++ b/src/assets/scss/utils/globals.scss
@@ -1,15 +1,6 @@
 @import "mixins";
 
-@import "../UI/caption";
-@import "../UI/achievement";
-@import "../UI/task";
-@import "../UI/btn";
-@import "../UI/inputs";
-@import "../UI/project";
-@import "../UI/breadcrumbs";
-@import "../UI/slider-item";
-@import "../UI/slick-theme";
-@import "../UI/slick";
+@import "../UI/index";
 
 html {
   height: 100%;
