header/need some js

--- a/src/assets/scss/UI/index.scss
+++ b/src/assets/scss/UI/index.scss
@@ -3,6 +3,7 @@
 @import "task";
 @import "btn";
 @import "inputs";
+@import "arrow-right";
 @import "project";
 @import "breadcrumbs";
 @import "slider-item";
@@ -10,3 +11,4 @@
 @import "slick";
 @import "logo";
 @import "burger";
+@import "overlay";
