--- a/src/assets/scss/UI/btn.scss
+++ b/src/assets/scss/UI/btn.scss
@@ -39,3 +39,43 @@
     max-width: 100%;
   }
 }
+
+.help-button{
+    display: inline-flex;
+    align-items: center;
+    background-color: $red;
+    border-radius: 24px;
+    @include title2($white);
+    font-weight: 800;
+    &:hover{
+      background: $hovered;
+      .help-button__icon:before {
+        filter: invert(1);
+      }
+    }
+    &:active{
+      background: $active;
+      .help-button__icon:before {
+        filter: invert(1);
+      }
+    }
+  &__icon{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    background: $white;
+    border-radius: 50%;
+    padding: 0;
+    border: none;
+    outline: none;
+    height: 48px;
+    min-width: 48px;
+    width: 48px;
+    &:before{
+      content: url('../../static/img/arrow.svg');
+      filter: invert(40%) sepia(51%) saturate(4223%) hue-rotate(336deg) brightness(95%) contrast(92%);
+      height: 32px;
+    }
+  }
+}
